# Boston_Marathon_Project

./: .gitignore  README.md  data_cleaning.py  eda.py  pacing_analysis.ipynb  proposal.tex  pyproject.toml
data_scripts/: 01_data_cleaning.py  02_feature_discovery_eda.py  03_rq1_demographic_baseline.py  04_rq2_personalized_mixed_effects.py  05_rq3_progressive_checkpoint.py  eda.py  q2_eda.py
notebooks/: MarathonTimesvsTemperature.ipynb
papers/: 2411.19384v1.md
results/: pipeline_metrics.json
results/tables/: tab_ablation_hierarchy.tex  tab_complexity_benchmark.tex  tab_conformal_crossover.tex  tab_data_summary.tex  tab_hard_switch.tex  tab_information_decay.tex  tab_mixed_effects.tex  tab_personalization.tex
scripts/: clean_data.py  preprocess.py  run.py  run_eda.py  run_pipeline.py
scripts/supplementary/: eda.py
src/: ablation.py  calibration.py  config.py  data.py  figures.py  lme4_backend.py  metrics.py  mixed_effects.py  regression.py  rq1.py  rq2.py  rq3.py  run_pipeline.py  splits.py  tables.py  weather.py
src/boston_marathon/: __init__.py  ablation.py  calibration.py  config.py  data.py  in_race_splits.py  inference.py  lme4_backend.py  metrics.py  mixed_effects.py  regression.py  rq1.py  rq2.py  rq3.py  splits.py  weather.py
src/marathon/: config.py  data.py  evaluation.py  inference.py  models.py  pipeline.py  reporting.py  visualization.py
