[project]
name = "boston-marathon-prediction"
version = "0.1.0"
description = "Information decomposition in marathon finish-time prediction"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.3",
    "pandas>=2.3",
    "pyarrow>=22.0",
    "rpy2>=3.6",
    "scikit-learn>=1.8",
    "scipy>=1.16",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
eda = ["pingouin>=0.6.1", "scikit-posthocs>=0.12"]
